--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 ##ignore this file##
-/target/ 
-.classpath
-.project
+*/target/ 
+*.classpath
+*.project
 
-.settings     
+*.settings     
 
  ##filter databfile、sln file##
 *.mdb  
