--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,7 @@
 ##ignore this file##
-*/target/ 
-*.classpath
-*.project
-
-*.settings     
-
- ##filter databfile、sln file##
-*.mdb  
-*.ldb  
-*.sln    
-##class file##
-*.com  
-*.class  
-*.dll  
-*.exe  
-*.o  
-*.so  
-
-# compression file
-*.7z  
-*.dmg  
-*.gz  
-*.iso  
-*.jar  
-*.rar  
-*.tar  
-*.zip  
-*.via
-*.tmp
-*.err 
-
-# OS generated files #  
-.DS_Store  
-.DS_Store?  
-._*  
-.Spotlight-V100  
-.Trashes  
-Icon?  
-ehthumbs.db  
-Thumbs.db  
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+/server/demo/target/
+/server/demo/.classpath
+/server/demo/.project
+/server/demo/.mvn/
+/server/demo/mvnw*
+/server/demo/.settings
