--- a/server/demo/pom.xml
+++ b/server/demo/pom.xml
@@ -54,6 +54,17 @@
 			<artifactId>flowable-spring-boot-starter-process-rest</artifactId>
 			<version>6.4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
