--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=fcbss@123
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,3 +15,8 @@ spring.h2.console.settings.trace=true
 spring.h2.console.settings.web-allow-others=true
 
 flowable.process-definition-location-prefix=classpath*:/processes/
+
+http.access-key=DATATOM4UAcOR3uLx3bx49kIDdAhaRCAr
+http.secret-key=skGqMOrcnOcu35Z9APzjfCZuauWQ7BWfIsoEJ1FI
+http.host=http://211.144.114.26:19001
+http.proxy-host=http://127.0.0.1:8888
