--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=fcbss@123
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
