--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+logging.level.com.example=debug
+
 server.port=8088
 spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
@@ -19,6 +21,4 @@ flowable.process-definition-location-prefix=classpath*:/processes/
 http.access-key=DATATOM4UAcOR3uLx3bx49kIDdAhaRCAr
 http.secret-key=skGqMOrcnOcu35Z9APzjfCZuauWQ7BWfIsoEJ1FI
 http.host=http://211.144.114.26:19001
-http.proxy-host=http://127.0.0.1:8888
-
 http.prefix=/api/sw
