--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -22,3 +22,18 @@ http.access-key=DATATOM4UAcOR3uLx3bx49kIDdAhaRCAr
 http.secret-key=skGqMOrcnOcu35Z9APzjfCZuauWQ7BWfIsoEJ1FI
 http.host=http://211.144.114.26:19001
 http.prefix=/api/sw
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# 开启发送确认
+spring.rabbitmq.publisher-confirms=true
+# 开启发送失败退回
+spring.rabbitmq.publisher-returns=true
+# 开启ACK
+spring.rabbitmq.listener.direct.acknowledge-mode=manual
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+mq.datrix-queue=datrix-queue
+mq.file-copy-queue=file-copy-queue
