--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -34,5 +34,6 @@ spring.rabbitmq.publisher-returns=true
 # 开启ACK
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-mq.datrix-queue=datrix-queue
-mq.file-copy-queue=file-copy-queue
+mq.exchange=ex_datrix4
+mq.queue.action=datrix-queue
+mq.queue.fileOper=file-copy-queue
