--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -23,10 +23,14 @@ http.secret-key=skGqMOrcnOcu35Z9APzjfCZuauWQ7BWfIsoEJ1FI
 http.host=http://211.144.114.26:19001
 http.prefix=/api/sw
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=211.144.114.26
+spring.rabbitmq.port=19003
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=datatom.com
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
 # 开启发送确认
 spring.rabbitmq.publisher-confirms=true
 # 开启发送失败退回
@@ -34,6 +38,11 @@ spring.rabbitmq.publisher-returns=true
 # 开启ACK
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-mq.exchange=ex_datrix4
-mq.queue.action=datrix-queue
-mq.queue.fileOper=file-copy-queue
+#
+datrix.mq.exchange=ex_datrix4
+datrix.mq.routingKey=actionkey
+datrix.mq.queue=action
+
+mq.routingKey=operationkey
+mq.exchange=ex_file
+mq.queue=operation
