--- a/server/demo/src/main/resources/application.properties
+++ b/server/demo/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.username=root
 spring.datasource.password=fcbss@123
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -39,10 +39,13 @@ spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 #
+#
 datrix.mq.exchange=ex_datrix4
 datrix.mq.routingKey=actionkey
 datrix.mq.queue=action
+datrix.mq.retry-time=30000
 
 mq.routingKey=operationkey
 mq.exchange=ex_file
 mq.queue=operation
+mq.retry-time=30000
