--- a/webapp/docker/nginx.conf
+++ b/webapp/docker/nginx.conf
@@ -20,3 +20,4 @@ server {
         proxy_set_header   X-Real-IP         $remote_addr;
     }
 }
+select _bb.ruleId,_bb.fileCount from (select  _aa.ruleId,count(_aa.targetFileId) fileCount from com.example.demo.entity.FileExchangeLog _aa where targetFileId=:userId group by _aa.ruleId ) _bb
